# dead-space-bot

./: .gitignore  CLAUDE.md  README.md  cortana-ears.sha256
brain/: pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql
brain/aura/: __init__.py  __main__.py  chat.py  config.py  health.py  ipc.py  tts.py  types.py  voice_gateway.py
brain/aura/audio/: __init__.py  capture.py  stt.py  vad.py  wake.py
brain/aura/core/: __init__.py  callsigns.py  db.py  discipline.py  incidents.py  personal_pings.py  routing.py
brain/aura/dsc/: __init__.py  bot.py  views.py
brain/aura/dsc/cogs/: __init__.py  admin.py  help.py  intel.py  ops.py  subs.py  utility.py
brain/aura/nlu/: gazetteer.py  grammar.py  phonetics.py  seed.py
brain/cortana/: __main__.py  alarms.py  chat.py  chat_math.py  config.py  config_schema.py  conversation.py  cortana_module.py  doctor.py  health.py  ipc.py  reload.py  tts.py  types.py  voice_gateway.py
brain/cortana/audio/: capture.py  stt.py  vad.py  wake.py
brain/cortana/core/: areas.py  callsigns.py  db.py  discipline.py  fun.py  incidents.py  personal_pings.py  routing.py
brain/cortana/data/facts/: animals.json  astronomy.json  body.json  engineering.json  eve.json  food.json  gaming.json  geography.json  history.json  insults_profane.json  insults_spacer.json  insults_witty.json  language.json  math.json  (+5 more)
brain/cortana/dialog/: __init__.py  engine.py  machine.py  types.py
brain/cortana/dsc/: bot.py  views.py
brain/cortana/nlu/: __init__.py  gazetteer.py  grammar.py  llm_nlu.py  phonetics.py  seed.py
brain/dead/: __init__.py  manager.py  module.py  registry.py  supervisor.py
brain/killboard/: __init__.py  api.py  battles.py  cards.py  commands.py  config.py  feed.py  items.py  market.py  market_commands.py  model.py  module.py  poller.py  public_juicy.py  rankings.py  schedule.py  store.py  value.py  views.py
brain/killboard/data/: items.txt
brain/killboard/migrations/: 0001_init.sql  0002_schedules_unique_kind.sql
brain/migrations/: 0001_init.sql  0002_reminders_polls.sql  0003_incident_raw_system_text.sql  0004_callsigns.sql  0005_personal_pings.sql  0006_app_state.sql  0007_timer_two_phase_and_pending_candidates.sql  0008_custom_areas.sql
brain/tests/: __init__.py  conftest.py  resolver_cases.py  test_alarms.py  test_app.py  test_areas.py  test_audio_units.py  test_bot_hardening.py  test_callsigns.py  test_capture.py  test_chat.py  test_chat_math.py  test_config.py  test_conversation_manager.py  test_db.py  test_discipline.py  test_doctor.py  test_fun.py  test_gazetteer.py  test_grammar.py  test_health.py  test_help_cog.py  test_incidents.py  test_intel_cog.py  test_ipc.py  test_kb_items.py  test_kb_market.py  test_kb_ranking_card.py  test_kb_value.py  test_killboard_cards.py  test_killboard_feed.py  test_killboard_model.py  test_killboard_poller.py  test_killboard_public_juicy.py  test_killboard_schedule.py  test_killboard_store.py  test_llm_nlu.py  test_module_manager.py  test_module_supervisor.py  test_personal_pings.py  (+13 more)
brain/tests/dialog/: test_capabilities.py  test_chatter_guard.py  test_conversation.py  test_machine.py
ears/: Cargo.toml  ears.yaml.example
ears/src/: config.rs  dsp.rs  ipc.rs  main.rs  playback.rs  state.rs  voice.rs
(+43 files in other folders)
