[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aura"
version = "1.0.0"
description = "AURA Brain — voice-activated fleet intel bot for an EVE Echoes corp Discord"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    # Core runtime deps. The full runtime set (audio/STT stack) lives in
    # requirements.txt; integrators add module-specific deps there.
    # Hard constraint 2: never add PyNaCl or discord.py[voice] here.
    "discord.py>=2.4",
    "PyYAML>=6.0",
    "structlog>=24.1",
]

[tool.setuptools.packages.find]
include = ["aura*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
