[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cortana"
version = "1.0.0"
description = "CORTANA Brain — voice-activated fleet intel bot for an EVE Echoes corp Discord"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    # Core runtime deps. The full runtime set (audio/STT stack) lives in
    # requirements.txt; integrators add module-specific deps there.
    # Hard constraint 2: never add PyNaCl or discord.py[voice] here.
    "discord.py>=2.4",
    "PyYAML>=6.0",
    "structlog>=24.1",
]

[tool.setuptools.packages.find]
# cortana = the voice module; dead = the game-agnostic kernel; killboard = the
# Albion add-on. All three install off `pip install -e brain`.
include = ["cortana*", "dead*", "killboard*"]

[tool.setuptools.package-data]
# The bundled fact/insult library (GDD §13.2) — plain JSON, loaded once at
# startup via importlib.resources.
cortana = ["data/facts/*.json"]
# The Albion item id↔name database (ao-bin-dumps) for the market layer.
killboard = ["data/*.txt", "migrations/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
